@@ -110,11 +110,11 @@ public class KpiDataProvider {
 	 * Fetches data from DB for the given project and sprints combination.
 	 *
 	 * @param kpiRequest
-	 *          The KPI request object.
+	 *            The KPI request object.
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @param sprintList
-	 *          The list of sprint IDs.
+	 *            The list of sprint IDs.
 	 * @return A map containing story list, sprint details, and JiraIssue history.
 	 */
 	public Map<String, Object> fetchIssueCountDataFromDB(KpiRequest kpiRequest, ObjectId basicProjectConfigId,
@@ -158,8 +158,8 @@ public class KpiDataProvider {
 		Set<String> totalIssue = new HashSet<>();
 		sprintDetails.forEach(dbSprintDetail -> {
 			if (CollectionUtils.isNotEmpty(dbSprintDetail.getTotalIssues())) {
-				totalIssue.addAll(
-						KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(dbSprintDetail, CommonConstant.TOTAL_ISSUES));
+				totalIssue.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(dbSprintDetail,
+						CommonConstant.TOTAL_ISSUES));
 			}
 		});
 
@@ -169,7 +169,8 @@ public class KpiDataProvider {
 		mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(), basicProjectConfigIds);
 
 		if (CollectionUtils.isNotEmpty(totalIssue)) {
-			resultListMap.put(STORIES, jiraIssueRepository.findIssueByNumber(mapOfFilters, totalIssue, uniqueProjectMap));
+			resultListMap.put(STORIES,
+					jiraIssueRepository.findIssueByNumber(mapOfFilters, totalIssue, uniqueProjectMap));
 			resultListMap.put(SPRINTSDETAILS, sprintDetails);
 		}
 		resultListMap.put("projectWiseStoryCategories", projectWiseStoryCategories);
@@ -181,11 +182,11 @@ public class KpiDataProvider {
 	 * Fetch data from data for given project.
 	 *
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @param startDate
-	 *          The start date
+	 *            The start date
 	 * @param endDate
-	 *          The end date
+	 *            The end date
 	 * @return The list of Build
 	 */
 	public List<Build> fetchBuildFrequencyData(ObjectId basicProjectConfigId, String startDate, String endDate) {
@@ -202,11 +203,11 @@ public class KpiDataProvider {
 	 * sprints combination.
 	 *
 	 * @param kpiRequest
-	 *          The KPI request object.
+	 *            The KPI request object.
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @param sprintList
-	 *          The list of sprint IDs.
+	 *            The list of sprint IDs.
 	 * @return A map containing estimate time, story list, sprint details, and
 	 *         JiraIssue history.
 	 */
@@ -248,16 +249,18 @@ public class KpiDataProvider {
 		Map<String, Object> capacityMapOfFilters = new HashMap<>();
 		KpiDataHelper.createAdditionalFilterMapForCapacity(kpiRequest, capacityMapOfFilters, filterHelperService);
 
-		capacityMapOfFilters.put(JiraFeature.SPRINT_ID.getFieldValueInFeature(), sprintList.stream().distinct().toList());
+		capacityMapOfFilters.put(JiraFeature.SPRINT_ID.getFieldValueInFeature(),
+				sprintList.stream().distinct().toList());
 		capacityMapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
 				basicProjectConfigIds.stream().map(ObjectId::new).distinct().toList());
-		resultListMap.put(ESTIMATE_TIME, capacityKpiDataRepository.findByFilters(capacityMapOfFilters, new HashMap<>()));
+		resultListMap.put(ESTIMATE_TIME,
+				capacityKpiDataRepository.findByFilters(capacityMapOfFilters, new HashMap<>()));
 		List<SprintDetails> sprintDetails = sprintRepository.findBySprintIDIn(sprintList);
 		Set<String> totalIssue = new HashSet<>();
 		sprintDetails.forEach(dbSprintDetail -> {
 			if (CollectionUtils.isNotEmpty(dbSprintDetail.getTotalIssues())) {
-				totalIssue.addAll(
-						KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(dbSprintDetail, CommonConstant.TOTAL_ISSUES));
+				totalIssue.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(dbSprintDetail,
+						CommonConstant.TOTAL_ISSUES));
 			}
 		});
 
@@ -265,8 +268,8 @@ public class KpiDataProvider {
 			List<JiraIssue> jiraIssueList = jiraIssueRepository.findIssueByNumberOrParentStoryIdAndType(totalIssue,
 					uniqueProjectMap, CommonConstant.NUMBER);
 			List<JiraIssue> subTaskList = jiraIssueRepository.findIssueByNumberOrParentStoryIdAndType(
-					jiraIssueList.stream().map(JiraIssue::getNumber).collect(Collectors.toSet()), uniqueProjectMapForSubTask,
-					CommonConstant.PARENT_STORY_ID);
+					jiraIssueList.stream().map(JiraIssue::getNumber).collect(Collectors.toSet()),
+					uniqueProjectMapForSubTask, CommonConstant.PARENT_STORY_ID);
 			List<JiraIssue> jiraIssues = new ArrayList<>();
 			jiraIssues.addAll(subTaskList);
 			jiraIssues.addAll(jiraIssueList);
@@ -287,9 +290,9 @@ public class KpiDataProvider {
 	 * sprints combination.
 	 *
 	 * @param kpiRequest
-	 *          The KPI request object.
+	 *            The KPI request object.
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @return A map containing estimate time, story list, sprint details, and
 	 *         JiraIssue history.
 	 */
@@ -306,7 +309,8 @@ public class KpiDataProvider {
 		sprintStatusList.add(SprintDetails.SPRINT_STATE_CLOSED.toLowerCase());
 		long time2 = System.currentTimeMillis();
 		List<SprintDetails> totalSprintDetails = sprintRepositoryCustom
-				.findByBasicProjectConfigIdInAndStateInOrderByStartDateDesc(basicProjectConfigObjectIds, sprintStatusList,
+				.findByBasicProjectConfigIdInAndStateInOrderByStartDateDesc(basicProjectConfigObjectIds,
+						sprintStatusList,
 						(long) customApiConfig.getSprintVelocityLimit() + customApiConfig.getSprintCountForFilters());
 		log.info("Sprint Velocity findByBasicProjectConfigIdInAndStateInOrderByStartDateDesc method time taking {}",
 				System.currentTimeMillis() - time2);
@@ -323,11 +327,11 @@ public class KpiDataProvider {
 	 * and sprints combination.
 	 *
 	 * @param kpiRequest
-	 *          The KPI request object.
+	 *            The KPI request object.
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @param sprintList
-	 *          The list of sprint IDs.
+	 *            The list of sprint IDs.
 	 * @return A map containing sprint details and JiraIssue list.
 	 */
 	public Map<String, Object> fetchSprintPredictabilityDataFromDb(KpiRequest kpiRequest, ObjectId basicProjectConfigId,
@@ -343,8 +347,8 @@ public class KpiDataProvider {
 		sprintStatusList.add(SprintDetails.SPRINT_STATE_CLOSED.toLowerCase());
 
 		List<SprintDetails> totalSprintDetails = sprintRepositoryCustom
-				.findByBasicProjectConfigIdInAndStateInOrderByStartDateDesc(basicProjectConfigObjectIds, sprintStatusList,
-						(long) customApiConfig.getSprintCountForFilters() + SP_CONSTANT);
+				.findByBasicProjectConfigIdInAndStateInOrderByStartDateDesc(basicProjectConfigObjectIds,
+						sprintStatusList, (long) customApiConfig.getSprintCountForFilters() + SP_CONSTANT);
 
 		List<String> totalIssueIds = new ArrayList<>();
 		if (CollectionUtils.isNotEmpty(totalSprintDetails)) {
@@ -361,7 +365,8 @@ public class KpiDataProvider {
 				Map<ObjectId, List<String>> customFieldMapping = duplicateIssues.keySet().stream()
 						.filter(fieldMappingMap::containsKey).collect(Collectors.toMap(Function.identity(), key -> {
 							FieldMapping fieldMapping = fieldMappingMap.get(key);
-							return Optional.ofNullable(fieldMapping).map(FieldMapping::getJiraIterationCompletionStatusKpi5)
+							return Optional.ofNullable(fieldMapping)
+									.map(FieldMapping::getJiraIterationCompletionStatusKpi5)
 									.orElse(Collections.emptyList());
 						}));
 				projectWiseDuplicateIssuesWithMinCloseDate = kpiHelperService
@@ -377,13 +382,14 @@ public class KpiDataProvider {
 				sprintDetails.forEach(dbSprintDetail -> {
 					FieldMapping fieldMapping = configHelperService.getFieldMappingMap()
 							.get(dbSprintDetail.getBasicProjectConfigId());
-					// to modify sprintdetails on the basis of configuration for the project
+					// to modify sprint details on the basis of configuration for the project
 					SprintDetails sprintDetail = KpiDataHelper.processSprintBasedOnFieldMappings(dbSprintDetail,
-							fieldMapping.getJiraIterationIssuetypeKpi5(), fieldMapping.getJiraIterationCompletionStatusKpi5(),
+							fieldMapping.getJiraIterationIssuetypeKpi5(),
+							fieldMapping.getJiraIterationCompletionStatusKpi5(),
 							finalProjectWiseDuplicateIssuesWithMinCloseDate);
 					if (CollectionUtils.isNotEmpty(sprintDetail.getCompletedIssues())) {
-						List<String> sprintWiseIssueIds = KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
-								CommonConstant.COMPLETED_ISSUES);
+						List<String> sprintWiseIssueIds = KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(
+								sprintDetail, CommonConstant.COMPLETED_ISSUES);
 						totalIssueIds.addAll(sprintWiseIssueIds);
 					}
 					projectWiseSprintDetails.addAll(sprintDetails);
@@ -404,7 +410,8 @@ public class KpiDataProvider {
 				basicProjectConfigIds.stream().distinct().collect(Collectors.toList()));
 
 		if (CollectionUtils.isNotEmpty(totalIssueIds)) {
-			List<JiraIssue> sprintWiseJiraList = jiraIssueRepository.findIssuesBySprintAndType(mapOfFilters, new HashMap<>());
+			List<JiraIssue> sprintWiseJiraList = jiraIssueRepository.findIssuesBySprintAndType(mapOfFilters,
+					new HashMap<>());
 			resultListMap.put(SPRINT_WISE_PREDICTABILITY, sprintWiseJiraList);
 		}
 		return resultListMap;
@@ -415,11 +422,11 @@ public class KpiDataProvider {
 	 * sprints combination.
 	 *
 	 * @param kpiRequest
-	 *          The KPI request object.
+	 *            The KPI request object.
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @param sprintList
-	 *          The list of sprint IDs.
+	 *            The list of sprint IDs.
 	 * @return A map containing story list, sprint details, and Scope change issue
 	 *         history.
 	 */
@@ -437,8 +444,9 @@ public class KpiDataProvider {
 		Map<String, Object> mapOfProjectFilters = new LinkedHashMap<>();
 		FieldMapping fieldMapping = configHelperService.getFieldMappingMap().get(basicProjectConfigId);
 		if (CollectionUtils.isNotEmpty(fieldMapping.getJiraStoryIdentificationKPI164())) {
-			KpiDataHelper.prepareFieldMappingDefectTypeTransformation(mapOfProjectFilters, fieldMapping.getJiradefecttype(),
-					fieldMapping.getJiraStoryIdentificationKPI164(), JiraFeature.ISSUE_TYPE.getFieldValueInFeature());
+			KpiDataHelper.prepareFieldMappingDefectTypeTransformation(mapOfProjectFilters,
+					fieldMapping.getJiradefecttype(), fieldMapping.getJiraStoryIdentificationKPI164(),
+					JiraFeature.ISSUE_TYPE.getFieldValueInFeature());
 			uniqueProjectMap.put(basicProjectConfigId.toString(), mapOfProjectFilters);
 		} else {
 			// In Case of no issue type fetching all the issueType for that proj
@@ -449,8 +457,8 @@ public class KpiDataProvider {
 		List<SprintDetails> sprintDetails = new ArrayList<>(sprintRepository.findBySprintIDIn(sprintList));
 		sprintDetails.forEach(dbSprintDetail -> {
 			if (CollectionUtils.isNotEmpty(dbSprintDetail.getCompletedIssues())) {
-				totalIssue.addAll(
-						KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(dbSprintDetail, CommonConstant.COMPLETED_ISSUES));
+				totalIssue.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(dbSprintDetail,
+						CommonConstant.COMPLETED_ISSUES));
 			}
 			if (CollectionUtils.isNotEmpty(dbSprintDetail.getNotCompletedIssues())) {
 				totalIssue.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(dbSprintDetail,
@@ -495,11 +503,11 @@ public class KpiDataProvider {
 	 * project and sprints combination.
 	 *
 	 * @param kpiRequest
-	 *          The KPI request object.
+	 *            The KPI request object.
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @param sprintList
-	 *          The list of sprint IDs.
+	 *            The list of sprint IDs.
 	 * @return A map containing story list, sprint details.
 	 */
 	public Map<String, Object> fetchCommitmentReliabilityData(KpiRequest kpiRequest, ObjectId basicProjectConfigId,
@@ -523,7 +531,8 @@ public class KpiDataProvider {
 			Map<ObjectId, List<String>> customFieldMapping = duplicateIssues.keySet().stream()
 					.filter(fieldMappingMap::containsKey).collect(Collectors.toMap(Function.identity(), key -> {
 						FieldMapping fieldMapping = fieldMappingMap.get(key);
-						return Optional.ofNullable(fieldMapping).map(FieldMapping::getJiraIterationCompletionStatusKpi72)
+						return Optional.ofNullable(fieldMapping)
+								.map(FieldMapping::getJiraIterationCompletionStatusKpi72)
 								.orElse(Collections.emptyList());
 					}));
 			projectWiseDuplicateIssuesWithMinCloseDate = kpiHelperService
@@ -534,17 +543,17 @@ public class KpiDataProvider {
 		Set<String> totalIssue = new HashSet<>();
 		sprintDetails.forEach(dbSprintDetail -> {
 			FieldMapping fieldMapping = fieldMappingMap.get(dbSprintDetail.getBasicProjectConfigId());
-			// to modify sprintdetails on the basis of configuration for the project
+			// to modify sprint details on the basis of configuration for the project
 			SprintDetails sprintDetail = KpiDataHelper.processSprintBasedOnFieldMappings(dbSprintDetail,
 					fieldMapping.getJiraIterationIssuetypeKpi72(), fieldMapping.getJiraIterationCompletionStatusKpi72(),
 					finalProjectWiseDuplicateIssuesWithMinCloseDate);
 			if (CollectionUtils.isNotEmpty(sprintDetail.getTotalIssues())) {
-				totalIssue.addAll(
-						KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail, CommonConstant.TOTAL_ISSUES));
+				totalIssue.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
+						CommonConstant.TOTAL_ISSUES));
 			}
 			if (CollectionUtils.isNotEmpty(sprintDetail.getPuntedIssues())) {
-				totalIssue.addAll(
-						KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail, CommonConstant.PUNTED_ISSUES));
+				totalIssue.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
+						CommonConstant.PUNTED_ISSUES));
 			}
 			if (CollectionUtils.isNotEmpty(sprintDetail.getAddedIssues())) {
 				totalIssue.addAll(sprintDetail.getAddedIssues());
@@ -568,7 +577,7 @@ public class KpiDataProvider {
 	 * sprints combination.
 	 *
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @return A map containing cost of delay data.
 	 */
 	public Map<String, Object> fetchCostOfDelayData(ObjectId basicProjectConfigId) {
@@ -588,7 +597,8 @@ public class KpiDataProvider {
 		if (CollectionUtils.isNotEmpty(fieldMapping.getIssueTypesToConsiderKpi113())) {
 			jiraIssueType.addAll(fieldMapping.getIssueTypesToConsiderKpi113());
 		}
-		closedStatusMap.put(basicProjectConfigId.toString(), jiraCloseStatuses.stream().map(String::toLowerCase).toList());
+		closedStatusMap.put(basicProjectConfigId.toString(),
+				jiraCloseStatuses.stream().map(String::toLowerCase).toList());
 		mapOfFilters.put(JiraFeature.ISSUE_TYPE.getFieldValueInFeature(), jiraIssueType);
 		mapOfFilters.put(JiraFeature.STATUS.getFieldValueInFeature(), jiraCloseStatuses);
 		mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
@@ -597,8 +607,9 @@ public class KpiDataProvider {
 
 		List<JiraIssue> codList = jiraIssueRepository.findIssuesByFilterAndProjectMapFilter(new HashMap<>(),
 				uniqueProjectMap);
-		List<JiraIssueCustomHistory> codHistory = jiraIssueCustomHistoryRepository.findByStoryIDInAndBasicProjectConfigIdIn(
-				codList.stream().map(JiraIssue::getNumber).toList(), new ArrayList<>(uniqueProjectMap.keySet()));
+		List<JiraIssueCustomHistory> codHistory = jiraIssueCustomHistoryRepository
+				.findByStoryIDInAndBasicProjectConfigIdIn(codList.stream().map(JiraIssue::getNumber).toList(),
+						new ArrayList<>(uniqueProjectMap.keySet()));
 		resultListMap.put(COD_DATA, codList);
 		resultListMap.put(COD_DATA_HISTORY, codHistory);
 		resultListMap.put(FIELD_MAPPING, closedStatusMap);
@@ -611,7 +622,7 @@ public class KpiDataProvider {
 	 * and sprints combination.
 	 *
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @return A list containing Project releases data.
 	 */
 	public List<ProjectRelease> fetchProjectReleaseData(ObjectId basicProjectConfigId) {
@@ -624,7 +635,7 @@ public class KpiDataProvider {
 	 * and sprints combination.
 	 *
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @return A list containing Project releases data.
 	 */
 	public List<JiraIssue> fetchPiPredictabilityData(ObjectId basicProjectConfigId) {
@@ -645,7 +656,8 @@ public class KpiDataProvider {
 		mapOfFilters.put(JiraFeature.ISSUE_TYPE.getFieldValueInFeature(), issueTypeList);
 
 		Map<String, List<String>> projectWisePIList = new HashMap<>();
-		List<ReleaseWisePI> releaseWisePIList = jiraIssueRepository.findUniqueReleaseVersionByUniqueTypeName(mapOfFilters);
+		List<ReleaseWisePI> releaseWisePIList = jiraIssueRepository
+				.findUniqueReleaseVersionByUniqueTypeName(mapOfFilters);
 		Map<String, List<ReleaseWisePI>> projectWiseData = releaseWisePIList.stream()
 				.collect(Collectors.groupingBy(ReleaseWisePI::getBasicProjectConfigId));
 
@@ -654,12 +666,13 @@ public class KpiDataProvider {
 					.filter(releaseWisePI -> CollectionUtils.isNotEmpty(releaseWisePI.getReleaseName()))
 					.collect(Collectors.groupingBy(releaseWisePI -> releaseWisePI.getReleaseName().get(0)));
 			versionWiseData.forEach((version, piData) -> {
-				if (CollectionUtils.isNotEmpty(piData) && CollectionUtils.isNotEmpty(issueTypeList) &&
-						piData.stream().anyMatch(releaseWisePI -> issueTypeList.contains(releaseWisePI.getUniqueTypeName()))) {
+				if (CollectionUtils.isNotEmpty(piData) && CollectionUtils.isNotEmpty(issueTypeList) && piData.stream()
+						.anyMatch(releaseWisePI -> issueTypeList.contains(releaseWisePI.getUniqueTypeName()))) {
 					projectWisePIList.putIfAbsent(projectId, new ArrayList<>());
 					projectWisePIList.computeIfPresent(projectId, (k, v) -> {
 						Optional<ReleaseWisePI> epicPIData = piData.stream()
-								.filter(releaseWisePI -> issueTypeList.contains(releaseWisePI.getUniqueTypeName())).findFirst();
+								.filter(releaseWisePI -> issueTypeList.contains(releaseWisePI.getUniqueTypeName()))
+								.findFirst();
 						epicPIData.ifPresent(releaseWisePI -> v.add(releaseWisePI.getReleaseName().get(0)));
 						return v;
 					});
@@ -681,11 +694,11 @@ public class KpiDataProvider {
 	 * and sprints combination.
 	 *
 	 * @param kpiRequest
-	 *          The KPI request object.
+	 *            The KPI request object.
 	 * @param basicProjectConfigId
-	 *          The project config ID.
+	 *            The project config ID.
 	 * @param sprintList
-	 *          The list of sprint IDs.
+	 *            The list of sprint IDs.
 	 * @return A map containing list of sub-tasks, list of sub-task history, sprint
 	 *         details.
 	 */
@@ -708,23 +721,23 @@ public class KpiDataProvider {
 		Set<String> totalNonBugIssues = new HashSet<>();
 		Set<String> totalIssue = new HashSet<>();
 		Set<String> totalIssueInSprint = new HashSet<>();
-		sprintDetails.stream().forEach(sprintDetail -> {
+		sprintDetails.forEach(sprintDetail -> {
 			if (CollectionUtils.isNotEmpty(sprintDetail.getTotalIssues())) {
 				FieldMapping fieldMapping = configHelperService.getFieldMapping(sprintDetail.getBasicProjectConfigId());
 				totalNonBugIssues.addAll(sprintDetail.getTotalIssues().stream()
 						.filter(sprintIssue -> !fieldMapping.getJiradefecttype().contains(sprintIssue.getTypeName()))
 						.map(SprintIssue::getNumber).collect(Collectors.toSet()));
-				totalIssue.addAll(
-						KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail, CommonConstant.TOTAL_ISSUES));
+				totalIssue.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
+						CommonConstant.TOTAL_ISSUES));
 			}
-			totalIssueInSprint
-					.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail, CommonConstant.TOTAL_ISSUES));
+			totalIssueInSprint.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
+					CommonConstant.TOTAL_ISSUES));
 			totalIssueInSprint.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
 					CommonConstant.COMPLETED_ISSUES_ANOTHER_SPRINT));
-			totalIssueInSprint.addAll(
-					KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail, CommonConstant.PUNTED_ISSUES));
-			totalIssueInSprint
-					.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail, CommonConstant.ADDED_ISSUES));
+			totalIssueInSprint.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
+					CommonConstant.PUNTED_ISSUES));
+			totalIssueInSprint.addAll(KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetail,
+					CommonConstant.ADDED_ISSUES));
 		});
 
 		// additional filter **/
@@ -740,7 +753,8 @@ public class KpiDataProvider {
 
 			List<JiraIssue> subTaskBugs = jiraIssueRepository
 					.findLinkedDefects(mapOfFilters, totalNonBugIssues, uniqueProjectMap).stream()
-					.filter(jiraIssue -> !totalIssueInSprint.contains(jiraIssue.getNumber())).collect(Collectors.toList());
+					.filter(jiraIssue -> !totalIssueInSprint.contains(jiraIssue.getNumber()))
+					.collect(Collectors.toList());
 			List<JiraIssueCustomHistory> subTaskBugsCustomHistory = jiraIssueCustomHistoryRepository
 					.findByStoryIDInAndBasicProjectConfigIdIn(
 							subTaskBugs.stream().map(JiraIssue::getNumber).collect(Collectors.toList()),
@@ -758,7 +772,7 @@ public class KpiDataProvider {
 	 * and sprints combination.
 	 *
 	 * @param sprintList
-	 *          The list of sprint IDs.
+	 *            The list of sprint IDs.
 	 * @return A map containing sprint details and Happiness KPI Data list.
 	 */
 	public Map<String, Object> fetchHappinessIndexDataFromDb(List<String> sprintList) {
@@ -767,12 +781,52 @@ public class KpiDataProvider {
 		List<SprintDetails> sprintDetails = sprintRepository.findBySprintIDIn(sprintList);
 		List<HappinessKpiData> happinessKpiDataList = happinessKpiDataRepository.findBySprintIDIn(sprintList);
 		// filtering rating of 0 i.e not entered any rating
-		happinessKpiDataList.forEach(happinessKpiData -> happinessKpiData.getUserRatingList()
-				.removeIf(userRatingData -> userRatingData.getRating() == null || userRatingData.getRating().equals(0)));
+		happinessKpiDataList.forEach(happinessKpiData -> happinessKpiData.getUserRatingList().removeIf(
+				userRatingData -> userRatingData.getRating() == null || userRatingData.getRating().equals(0)));
 		resultListMap.put(SPRINT_DETAILS, sprintDetails);
 		resultListMap.put(HAPPINESS_INDEX_DETAILS, happinessKpiDataList);
 
 		return resultListMap;
+	}
+
+	/**
+	 * Fetches DIR KPI data from the database for the given project and sprints
+	 * combination.
+	 *
+	 * @param kpiRequest
+	 *            The KPI request object.
+	 * @param basicProjectConfigId
+	 *            The project config ID.
+	 * @param sprintList
+	 *            The list of sprint IDs.
+	 * @return A map containing list of jira issues and list of defects
+	 *
+	 */
+	public Map<String, Object> fetchDefectInjectionRateDataFromDb(KpiRequest kpiRequest, ObjectId basicProjectConfigId,
+			List<String> sprintList) {
+
+		return kpiHelperService.fetchDIRDataFromDb(basicProjectConfigId, kpiRequest, sprintList);
+
+	}
+
+	/**
+	 * Fetches DD KPI data from the database for the given project and sprints
+	 * combination.
+	 *
+	 * @param kpiRequest
+	 *            The KPI request object.
+	 * @param basicProjectConfigId
+	 *            The project config ID.
+	 * @param sprintList
+	 *            The list of sprint IDs.
+	 * @return A map containing list of jira issues and list of defects
+	 *
+	 */
+	public Map<String, Object> fetchDefectDensityDataFromDb(KpiRequest kpiRequest, ObjectId basicProjectConfigId,
+			List<String> sprintList) {
+
+		return kpiHelperService.fetchQADDFromDb(basicProjectConfigId, kpiRequest, sprintList);
+
 	}
 
 	/**
@@ -880,11 +934,11 @@ public class KpiDataProvider {
 					if (!defectStatus.isEmpty() && (StringUtils.isNotEmpty(jiraIssue.getResolution()) &&
 							CollectionUtils.isNotEmpty(defectStatus.get(Constant.RESOLUTION_TYPE_FOR_REJECTION)) &&
 							defectStatus.get(Constant.RESOLUTION_TYPE_FOR_REJECTION).stream().map(String::toLowerCase)
-									.collect(Collectors.toList()).contains(jiraIssue.getResolution().toLowerCase()) ||
+									.toList().contains(jiraIssue.getResolution().toLowerCase()) ||
 							(StringUtils.isNotEmpty(jiraIssue.getStatus()) &&
 									CollectionUtils.isNotEmpty(defectStatus.get(Constant.DEFECT_REJECTION_STATUS)) &&
 									defectStatus.get(Constant.DEFECT_REJECTION_STATUS).stream().map(String::toLowerCase)
-											.collect(Collectors.toList()).contains(jiraIssue.getStatus().toLowerCase())))) {
+											.toList().contains(jiraIssue.getStatus().toLowerCase())))) {
 						defectListWthDropSet.add(jiraIssue);
 					}
 				}
